# Portfolio

./: pyproject.toml  requirements.txt
Estudos_code_show/: converters.py  db.py  exemplo1.py  exemplo2.py  exemplo3.py
Estudos_flask/: exemplo1.py
Meu_Portfolio/: pyproject.toml
Meu_Portfolio/Portfolio/: app.py  makefile  requirements.txt
Meu_Portfolio/Portfolio/ext/site/: config.py  main.py
Meu_Portfolio/Portfolio/static/: script.js  style.css
Meu_Portfolio/Portfolio/templates/: base.html  index.html
Meu_Portfolio/meu_portfolio/: __init__.py  app.py  hello.py
Meu_Portfolio/meu_portfolio/template/: index.html
Meu_Portfolio/tests/: test_meu_portfolio.py
Portifolio/: pyproject.toml
Portifolio/portifolio/: app.py
Portifolio/tests/: test_portifolio.py
