[tool.poetry]
name = "Meu_Portfolio"
version = "0.1.0"
description = ""
authors = ["Luan Bezerra <luan.silvapvh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-Mail = "^0.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
